--- a/VRChat/03/1031003.html
+++ b/VRChat/03/1031003.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "uvb92L86ZffXz7yoziKCs6vtjdljZz5kS3pWan4Z6Ew="></script>
+    "WddEr0EmzEm6tNTataL7SstxwYmCjgBbLFmWMgUTP4E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【オリジナル3Dモデル】紳士の杖（△134ポリゴン）","description":"紳士の杖、オリジナル3Dモデルです。VRChatなどでアクセサリとしてどうでしょうか。\n△134ポリゴン\n\n画像前半2枚のシェーダーはStandard、3枚目はFlatLitToonを適用しています。\n\n---------------------------------------------------------------\nファイルの中身\n・ShinshiStick.unitypackage\n・Shinshi_stickLowPoly.fbx\n・各種texture\n\nテクスチャデータはサイズ1024で制作しました。\n圧縮前のデータをzipに入れてあります。\nファイルサイズが大きいので、unityで使う際に圧縮をしてください。\nシェーダーはStandardが適用されていますが、別のものに変えることで見た目は大きく変わります。色々なものをお試しください。\n\nsampleシーンはunity version 5.6.3p1で制作しました。\n\n改変自由。\n3Dモデルデータとして使える状態での再配布禁止。\nゲーム、映像作品などで使うことができます。商用可。\n誹謗中傷、違法行為、または国防に関する法律に違反する行為への使用を禁止します。\nwakamaru shop","url":"https://booth.pm/ja/items/1031003","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/ba1632d1-d7a2-47bf-b5c7-b1b4c83290fc/i/1031003/a712f714-4770-4e8e-a2e2-c764708af8d0_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uvb92L86ZffXz7yoziKCs6vtjdljZz5kS3pWan4Z6Ew="></script>
+    nonce="WddEr0EmzEm6tNTataL7SstxwYmCjgBbLFmWMgUTP4E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -120,6 +120,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -164,7 +166,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1031003/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               35
@@ -179,14 +181,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1031003/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               35
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
