--- a/VRChat/01/1030601.html
+++ b/VRChat/01/1030601.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+S/vatYWJK/tG0XsIllRTeHCzNcAUP9Yw6h49Tn3vBk="></script>
+    "GTfKUqeLcuoWkwJZnq9EMFXVsCCpa16gsNKYA5ZAX3k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル　マルチプル(プラズマ)ブレード","description":"□マルチプルブレード\n\n□実体ナイフからプラズマ刀身を展開出来る可変剣の3Dモデルです。\nシェイプキーを利用してプラズマ刀身を伸ばせます。\n鞘・プラズマ刀身込で1188△ポリゴン。\n\n通常版およびboost・投銭用の内容は完全に同じものです。\n\n\n□内容\n・multipleBlade.fbx　本体\n\n・multipleBlade.unitypackage　本体2\n\n・readme.txt これ\n\n・0x.png　サンプル画像\n\n\n□使用方法\n\nfbxデータやunitypackageを各種ソフトにインポートしてご利用下さい。\n\n\n□可変長\n\n「plasma」という名前のオブジェクトに入っているシェイプキーの数字を上げ下げする事でプラズマ刀身を伸ばせます。\nまた、ダイナミックボーンがプロジェクトに導入済みの場合は「dB」オブジェクトを有効にする事でライトセーバー風にブラーが発生させられます。\n\n\n□利用規約\n\n配布行為そのものを目的とした再配布を禁じます。\n(自作のモデルの一部に組み込む等の場合は可)\n\nVRchat、改変、動画、同人、移植、商用などにどうぞ。\n\n\n\n\n\n□連絡先\n\nTwitter： @mabo_to_fu\nメール： stanag2324@gmail.com","url":"https://booth.pm/ja/items/1030601","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/dd09d57d-ff0e-4d48-b34c-08c891168638/i/1030601/677d9cf7-e356-431c-9170-2ccc61ca0545_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+S/vatYWJK/tG0XsIllRTeHCzNcAUP9Yw6h49Tn3vBk="></script>
+    nonce="GTfKUqeLcuoWkwJZnq9EMFXVsCCpa16gsNKYA5ZAX3k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -184,7 +186,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1030601/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               61
@@ -199,14 +201,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1030601/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               61
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
