--- a/VRChat/03/1024003.html
+++ b/VRChat/03/1024003.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "IjLZR8k35X5AG6kyWZ8gpOadfhb3xZ83MNRB2iUicFs="></script>
+    "NrWmd1YpMQYXQh9ZcZWjsj10Oj/bk+8aQHLxUzn0qtY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":" ３Dモデル - ねこすりっぱ -","description":"VRC/Unityゲーム当に利用可能な足用アクセサリ、ねこすりっぱです。\n\n・商用：可　\n・二次配布：不可　\n・改変：可\n・アダルトコンテンツへの利用：可\n・他利用規約を参照(購入の時点で利用規約に同意したものとします。)\n\n※特記事項\n・当モデルを利用したアバターをVRCのpublicワールドを除くアバターペデスタルにて利用することを許可します。\n\nVRChat等のアプリ、ゲーム制作、Vtuber活動等の動画配信にも利用可能です。\n\n2021/07/30：サポートを終了した為、これ以降の更新は行われません。","url":"https://booth.pm/ja/items/1024003","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/3923a6a5-7600-4cc2-9240-d92591e77ceb/i/1024003/51c358e3-7f2d-40dd-ba3a-5f39d44affe6_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IjLZR8k35X5AG6kyWZ8gpOadfhb3xZ83MNRB2iUicFs="></script>
+    nonce="NrWmd1YpMQYXQh9ZcZWjsj10Oj/bk+8aQHLxUzn0qtY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1024003/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               126
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1024003/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               126
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
