--- a/VRChat/20/1030020.html
+++ b/VRChat/20/1030020.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "BZ1V2sBTq2xDbyWf9btDU2V/GLxRuYcUkN36bDdw/J4="></script>
+    "W8E61NOEhN6OIt7oSRrV6080BESRe1JH+cSGh9w1Vy8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"月詠の大鎌","description":"ホントは中秋の名月に合わせて作りたかったけど間に合わなかった月モチーフの大鎌です。\n\nお好みの感じにダイナミックボーン調整して振り回してあげてください。\n\n\n\n～内容物～\n・unitypackage\n・FBX\n・テクスチャ\n・各種説明書（画像説明ありのPDF形式）\n　※（12/07）ネットで見られる手順書を作成しました（PDFは情報が古い可能性があります）\n\n★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）\nhttps://docs.google.com/spreadsheets/d/1DCh-S5Rafb_NYJTQHtXame5xNWiDTWg5RKkcSiIdyXA/edit?usp=sharing\n\n\n\n～詳細～\n・三角面数：2983\n・ダイナミックボーン対応\n・マテリアル：2\n・まんまるしぇーだー適用済み\n　※必要に応じて最新版のシェーダーをご使用ください。\n・prefabやシーンデータ込み\n","url":"https://booth.pm/ja/items/1030020","offers":{"priceCurrency":"JPY","@type":"Offer","price":"700"},"image":"https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1030020/37c9a649-6455-47d4-a8a7-7d590d9095db_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="BZ1V2sBTq2xDbyWf9btDU2V/GLxRuYcUkN36bDdw/J4="></script>
+    nonce="W8E61NOEhN6OIt7oSRrV6080BESRe1JH+cSGh9w1Vy8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1030020/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               29
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1030020/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               29
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
