--- a/VRChat/39/1029239.html
+++ b/VRChat/39/1029239.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ylVl2O+I7JAEnvNrd/d3q+qqJLPGEJSh42PBus+tEdU="></script>
+    "jhr3j04JUKYjpozXeO1pw+GOmoijxNu5siOLT+HcgRU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"バールのようなもの","description":"バールです。言い逃れできない殴打武器です。１４４ポリです。\n本体fbx、テクスチャ３枚です。\nstandardshaderの対応するところにテクスチャを放り込んでゲージをいい感じにいじってやってください。","url":"https://booth.pm/ja/items/1029239","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/97a252e6-17fb-4604-b972-5868719c8877/i/1029239/347e5122-0d18-4b51-a618-b87d048ace7f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ylVl2O+I7JAEnvNrd/d3q+qqJLPGEJSh42PBus+tEdU="></script>
+    nonce="jhr3j04JUKYjpozXeO1pw+GOmoijxNu5siOLT+HcgRU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1029239/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               64
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1029239/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               64
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
